--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 click==6.6
 nltk==3.2.1
 numpy==1.11.2
-pandas==0.19.0
+protobuf==3.0.0
 pymongo==3.3.0
 python-dateutil==2.5.3
 pytz==2016.7
 six==1.10.0
-vincent==0.4.4
+tensorflow==0.11.0rc2
