--- a/.gitignore
+++ b/.gitignore
@@ -88,5 +88,5 @@ ENV/
 # Rope project settings
 .ropeproject
 
-# Generated datasets for plotting
-*.json
+# Downloaded image for recognition
+*.jpg
